# trenitalia

./: .gitignore  Cargo.toml  LICENSE  README.md  aliases.tsv  id_gen.py  id_lf_map.tsv  id_vt.tsv  lf_vt_map.tsv  map_for_lefrecce.py  out  out.tsv  stations.tsv  stazioni_coord.tsv  vt_lf_map.tsv
src/: lefrecce.rs  lib.rs  mapping.rs  tests.rs  types.rs  utils.rs
