[package]
name = "trenitalia"
version = "0.3.1"
authors = ["Eugenio Tampieri <eugenio.tampieri@icloud.com>"]
edition = "2018"
description = "A crate to get information about Trenitalia trains and stations"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4"
strsim = "0.9"
