[package]
name = "trenitalia"
version = "0.3.3"
authors = ["Eugenio Tampieri <eugenio.tampieri@icloud.com>"]
edition = "2018"
description = "A crate to get information about Trenitalia trains and stations"
license = "MIT"
repository = "https://github.com/eutampieri/trenitalia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = "0.4"
strsim = "0.9"
