[package]
name = "trenitalia"
version = "0.3.5"
authors = ["Eugenio Tampieri <eugenio.tampieri@icloud.com>"]
edition = "2018"
description = "A crate to get information about Trenitalia trains and stations"
license = "MIT"
repository = "https://github.com/eutampieri/trenitalia"
keywords = ["trains", "italy"]
categories=["api-bindings"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = {version = "2.5", features = ["default", "json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = "0.4"
strsim = "0.10"
